--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "vanilla-vite-template",
+  "name": "evoplay",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build --base=/vanilla-vite-template/",
+    "build": "vite build --base=/STP-7978/",
     "preview": "vite preview",
     "build:preview": "vite build && vite preview",
     "predeploy": "npm run build",
